Adding app homepage and single page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,21 @@
-{{ define "header" }}{{ partial "page-header.html" . }}{{ end }}
 {{ define "main" }}
-  <div class="flex-l mt2 mw8 center">
+<div class="flex-l mt2 mw8 center">
     <article class="center cf pv5 ph3 ph4-ns mw7">
-      <div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
-        {{ .Content }}
-      </div>
+        <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
+            {{.Content}}
+        </div>
+        <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
+            {{ range ( where .Site.RegularPages "Type" "app" ) }}
+            <div class="app-list">
+                <img src="images/{{ .Params.icon }}" width="200" height="200"/>
+                <div>
+                    <a href="{{ .Permalink }}"><h2>{{ .Title }}</h2></a>
+                    <p>{{ .Params.summary }}</p>
+                </div>
+            </div>
+            {{ end }}
+        </div>
+
     </article>
-  </div>
+</div>
 {{ end }}
