--- a/static/css/app.css
+++ b/static/css/app.css
@@ -20,3 +20,16 @@ button[type="submit"] {
     float: right;
     padding: 10px;
 }
+
+.app-list {
+    display: flex;
+    padding: 50px 0;
+}
+
+.app-list a, .applist a:visited {
+    color: #555;
+}
+
+.app-list a:hover {
+    color: #333;
+}
